myk8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myflask-app
  namespace: flask-sql-namespace
  labels:
    app: myflask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myflask-app
  template:
    metadata:
      labels:
        app: myflask-app
    spec:
      containers:
      - name: myflask-app
        image: salehktk005/myflask-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
