myk8s/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: saleh-thoughts-app
  namespace: flask-sql-namespace
spec:
  selector:
    app: saleh-thoughts-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30004
  type: NodePort
