myk8s/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: flask-sql-namespace
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
